# openmpf_puzzle_piece_detection

./: Dockerfile  README.md  setup.cfg
plugin-files/descriptor/: descriptor.json
puzzle_piece_detection/: puzzle_piece_detection.py
tests/: test_puzzle_piece_detection.py
