[metadata]
name = MyComponent
version = 0.1

[options]
packages = my_component
install_requires =
    mpf_component_api>=0.1
    mpf_component_util>=0.1

[options.entry_points]
mpf.exported_component =
    component = puzzle_piece_detection.puzzle_piece_detection:PuzzlePieceDetection

[options.package_data]
my_component=models/*
