[metadata]
name = PuzzlePieceDetection
version = 8.0

[options]
packages = puzzle_piece_detection
install_requires =
    mpf_component_api>=8.0
    mpf_component_util>=8.0
    ultralytics
    lap

[options.entry_points]
mpf.exported_component =
    component = puzzle_piece_detection.puzzle_piece_detection:PuzzlePieceDetection

[options.package_data]
my_component=models/*
